syntax = "proto3";
package grpc;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
  }
  rpc LotsOfReplies (HelloRequest) returns (stream HelloResponse) {
  }
  rpc LotsOfGreetings (stream HelloRequest) returns (HelloResponse) {
  }
  rpc BidiHello (stream HelloRequest) returns (stream HelloResponse) {
  }
}
